package scratch.model;

public class EndRepeatAction {
}
