package scratch.model;

public class RepeatAction {
}
