@startuml Domain Class Diagram - Scratch-like (iteration 2)

!theme plain
skinparam backgroundColor #FAFAFA
skinparam classAttributeIconSize 0

' === Colors: classes, abstract, enum ===
skinparam class {
  BackgroundColor #E8F5E9
  BorderColorrgb(110, 184, 113)
  FontColor #1B5E20
  ArrowColor #37474F
}
skinparam abstractClass {
  BackgroundColor #E3F2FD
  BorderColor #1565C0
  FontColor #0D47A1
}
skinparam enum {
  BackgroundColor #F3E5F5
  BorderColor #7B1FA2
  FontColor #4A148C
}
skinparam note {
  BackgroundColor #FFFDE7
  BorderColor #F9A825
  FontColor #333333
}
skinparam arrow {
  Color #37474F
}

title Domain class diagram\n(actions + execution model)\nCommand + Composite pattern\nIteration 2

' Forcer un agencement plus vertical (moins large)
top to bottom direction

' ================= ACTION TYPES (file format) =================
rectangle "**Action types**" as pkg_types #F3E5F5 {
  enum ActionType {
    MOVE_FORWARD
    TURN_LEFT
    TURN_RIGHT
    PEN_UP
    PEN_DOWN
    VAR_DECLARATION
    VAR_ASSIGNMENT
    INCREMENT_VARIABLE
    REPEAT
    END_REPEAT
  }
}

' ================= VARIABLES =================
rectangle "**Variables**" as pkg_vars #FFFDE7 {
  class Variable {
    - name : String
    - value : int
    --
    + getName() : String
    + getValue() : int
    + setValue(value : int) : void
  }
}

' ================= ACTION (Command + Composite) =================
rectangle "**Actions (Command + Composite)**" as pkg_actions #E8F5E9 {
  abstract class Action {
    + execute(context : ExecutionContext) : void
    + isValid(context : ExecutionContext) : boolean
    + getType() : ActionType
  }

  abstract class ParameterizedAction {
    - value : int
    + getValue() : int
    + setValue(value : int) : void
  }

  Action <|-- ParameterizedAction

  class MoveForwardAction {
    - value : int {1..100, default 30}
    + execute(context : ExecutionContext) : void
    + isValid(context : ExecutionContext) : boolean
    + getValue() : int
    + setValue(value : int) : void
  }

  class TurnLeftAction {
    - value : int {1..180, default 90}
    + execute(context : ExecutionContext) : void
    + isValid(context : ExecutionContext) : boolean
    + getValue() : int
    + setValue(value : int) : void
  }

  class TurnRightAction {
    - value : int {1..180, default 90}
    + execute(context : ExecutionContext) : void
    + isValid(context : ExecutionContext) : boolean
    + getValue() : int
    + setValue(value : int) : void
  }

  class PenUpAction {
    + execute(context : ExecutionContext) : void
    + isValid(context : ExecutionContext) : boolean
  }

  class PenDownAction {
    + execute(context : ExecutionContext) : void
    + isValid(context : ExecutionContext) : boolean
  }

  ParameterizedAction <|-- MoveForwardAction
  ParameterizedAction <|-- TurnLeftAction
  ParameterizedAction <|-- TurnRightAction
  Action <|-- PenUpAction
  Action <|-- PenDownAction

  ' === Nouvelles actions variables ===
  class VarDeclarationAction {
    - name : String
    + execute(context : ExecutionContext) : void
    + isValid(context : ExecutionContext) : boolean
  }

  class VarAssignmentAction {
    - variableName : String
    - valueExpression : String  "littéral ou nom de variable"
    + execute(context : ExecutionContext) : void
    + isValid(context : ExecutionContext) : boolean
  }

  class IncrementVariableAction {
    - variableName : String
    - deltaExpression : String "littéral ou nom de variable"
    + execute(context : ExecutionContext) : void
    + isValid(context : ExecutionContext) : boolean
  }

  Action <|-- VarDeclarationAction
  Action <|-- VarAssignmentAction
  Action <|-- IncrementVariableAction

  ' === Actions de contrôle pour la boucle Repeat (Composite) ===
  class RepeatAction {
    - counterExpression : String "littéral ou nom de variable"
    - body : List<Action>
    --
    + execute(context : ExecutionContext) : void
    + isValid(context : ExecutionContext) : boolean
  }

  class EndRepeatAction {
    + execute(context : ExecutionContext) : void
    + isValid(context : ExecutionContext) : boolean
  }

  Action <|-- RepeatAction
  Action <|-- EndRepeatAction

  RepeatAction "1" o-- "*" Action : body
}

' ================= PROGRAM =================
rectangle "**Program**" as pkg_program #FFF3E0 {
  class Program {
    - actions : List<Action>
    - currentIndex : int
    --
    + addAction(action : Action) : void
    + removeAction(index : int) : void
    + getAction(index : int) : Action
    + getActions() : List<Action>
    + moveUp(index : int) : void
    + moveDown(index : int) : void
    + duplicateAt(index : int) : void
    + clear() : void
    --
    + isValid(context : ExecutionContext) : boolean
    + executeNext(context : ExecutionContext) : void
    + hasNext() : boolean
    + resetExecution() : void
  }
}

Program "1" o-- "*" Action : contains

' ================= EXECUTION (context + drawing support) =================
rectangle "**Execution**" as pkg_exec #E1F5FE {
  class Segment {
    - x1 : int
    - y1 : int
    - x2 : int
    - y2 : int
    --
    + getX1() : int
    + getY1() : int
    + getX2() : int
    + getY2() : int
  }

  class ExecutionContext {
    - x : int
    - y : int
    - direction : int {degrees, 0 = up}
    - penDown : boolean
    - segments : List<Segment>
    - variables : Map<String, Variable>
    --
    + move(distance : int) : void
    + turnLeft(angle : int) : void
    + turnRight(angle : int) : void
    + penUp() : void
    + penDown() : void
    + reset() : void
    + getX() : int
    + getY() : int
    + getDirection() : int
    + isPenDown() : boolean
    + getSegments() : List<Segment>
    + getSegmentsCount() : int
    --
    + declareVariable(name : String) : void
    + getVariable(name : String) : Variable
    + setVariable(name : String, value : int) : void
    + hasVariable(name : String) : boolean
  }

  ExecutionContext "1" o-- "*" Segment : contains
  ExecutionContext "1" o-- "*" Variable : manages
}

' Action uses context at execution time
Action ..> ExecutionContext : used in execute()
Program ..> ExecutionContext : uses in isValid()
VarDeclarationAction ..> Variable
VarAssignmentAction ..> Variable
IncrementVariableAction ..> Variable

note right of Action
  **Command + Composite pattern**
  Each action encapsulates an operation
  and its parameters.
  isValid(ctx) checks if the action can
  be executed.
  execute(ctx) delegates to the context
  (move, turnLeft, etc.).
  RepeatAction is a composite that owns
  a list of Action (its body).
end note

note bottom of Program
  Ordered list of actions.
  isValid(ctx) simulates all actions
  (including variables and loops)
  before real execution.
  executeNext(ctx) runs the action
  at currentIndex then increments.
end note

note bottom of ExecutionContext
  **Drawing + variables context**
  Tracks position, direction, pen state,
  and all variables of the program.
  move(distance) creates a Segment when
  penDown is true and adds it to segments.
  variables : Map<String, Variable>
  ensures:
    - valid variable names
    - declaration before use
    - initialisation à 0
end note

@enduml